2007-??-??: 1.17
	fixed Int32.compare, added Int32.read and Int32.write
	fixed type of unitialized registers in flash9
	fixed Sqlite transactions (commit and rollback now restart a transaction)

2007-10-31: 1.16
	use _sans font for default flash traces (better Linux support)
	fixed haxe.remoting.Connection compilation for Flash<8
	added fix to prevent 64K identifiers limit on Flash<9
	ensure order of anonymous fields initialization
	fixed haxe.remoting.Connection.urlConnect in JS
	use amortized O(1) for Neko Array implementation
	ndlls libraries should now use .neko() instead of __a
	allowed 'u' utf8 for regexp (needs Neko 1.6.1 regexp.ndll on windows)
	onclick and onsubmit JS events returns Bool
	fixed inherited constructor of extern class was always private
	fixed Ereg.split without 'g' flag on JS/Flash9
	fixed haxe.Stack in JS without -debug
	added support for -D no-swf-compress
	fixed ByteArray.readObject
	fixed implements Dynamic in Flash9
	removed neko.io.FileInput.eof, fixed neko.io.Input.readLine
	fixed haxe.Template for Flash9
	added neko.Sys.command optional array of arguments
	removed haxe.Proxy
	added flash.XMLRequest
	fixed Type.enumParameters for Neko
	guaranteed order of Type.getEnumConstructs same as code
	used index-based dispatch for enums
	added Type.enumIndex
	fixed enum.toString for Flash and JS
	support for -Dnetwork-sandbox
	trim -cp and -resource
	various genas3 fixes

2007-08-29: 1.15
	fixed bug with Enum.construct when Enum have type parameters
	change with "untyped" : arguments types are checked (because of opt select)
	haxedoc : fixed type parameters display
	fix for JS and Flash9 XML parser : allow newlines in attributes
	disable Flash9 resources with AS3Gen
	error on extra anonymous fields
	error on too much big neko array declaration (neko 1.6 max_stack limit)
	fixed Flash9 statics slots (FP 9,0,60 compatibility)
	fixed Flash9 Type.getClassName
	optional enums arguments on Flash9 are now automatically Null