@@ -2,6 +2,8 @@
 	fixed Int32.compare, added Int32.read and Int32.write
 	fixed type of unitialized registers in flash9
 	fixed Sqlite transactions (commit and rollback now restart a transaction)
+	optimized a...b loops (tmp variable can't be modified)
+	several flash9 optimizations
 
 2007-10-31: 1.16
 	use _sans font for default flash traces (better Linux support)
